tests/codegen/fail/object/attr_field_double_underscored.rs
use juniper::graphql_object;

struct ObjA;

#[graphql_object]
impl ObjA {
    fn __id(&self) -> &str {
        "funA"
    }
}

fn main() {}
